switched to browserify, added underscore dependency.

--- a/demo.html
+++ b/demo.html
@@ -5,5 +5,9 @@
     <script type="text/javascript" src="knob.min.js"></script>
   </head>
   <body>
+    <script>
+      console.log(knob);
+      new knob.Knob(document.body);
+    </script>
   </body>
 </html>
