added drag handler

--- a/demo.html
+++ b/demo.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <script>
-      console.log(knob);
-      new knob.Knob(document.body);
+      var k = new knob.Knob(document.body);
+      k.value = 7;
     </script>
   </body>
 </html>
