--- a/examples/manyknobs.html
+++ b/examples/manyknobs.html
@@ -3,27 +3,17 @@
   <head>
     <title>knobjs demo page</title>
     <script type="text/javascript" src="knob.min.js"></script>
-    <style>
-      .jsknob-bg {fill: rgba(0,0,0,0);}
-      .jsknob-arcbg {fill: rgba(0,0,0,0); stroke-width:0.1; stroke: #555;}
-      .jsknob-arc {fill:#e5e;}
-
-      x-jsknob-knob {
-        display: inline-block;
-        height: 100px;
-        width: 100px;
-      }
-    </style>
+    <link rel="stylesheet" href="knobjs.css"/>
   </head>
   <body>
     <script>
-      var numKnobs = 3;
+      var numKnobs = 100;
       window.addEventListener('WebComponentsReady', function(){
         var knobs = [];
         var i;
         var changing = false;
         for(i = 0; i < numKnobs; i++) {
-          var knob = document.createElement('x-jsknob-knob')
+          var knob = document.createElement('x-knobjs-knob')
           knobs.push(knob);
           document.body.appendChild(knob);
         }
