--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p> Source: </p>
         <pre><code>
 &lt;x-knobjs-knob id="knob"&gt;&lt;/x-knobjs-knob&gt;
-&lt;input id="input" style="vertical-align:top;"&rt;
+&lt;input id="input" style="vertical-align:top;"&gt;
 &lt;script&gt;
   window.onload = function(){
     var knob = document.getElementById("knob");
@@ -62,7 +62,7 @@
       knob.value = ~~input.value;
     }
   }
-&lt;/script&rt;</code></pre>
+&lt;/script&gt;</code></pre>
 
       </section>
       <section>
