moved css and js

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Knobjs by russellmcc</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/knobjs.css">
+    <link rel="stylesheet" href="knobjs.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <script type="text/javascript" src="javascripts/knob.min.js"></script>
+    <script type="text/javascript" src="knob.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
