added hot-linking option

--- a/examples/manyknobs.html
+++ b/examples/manyknobs.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>knobjs demo page</title>
-    <script type="text/javascript" src="knob.min.js"></script>
-    <link rel="stylesheet" href="knobjs.css"/>
+    <script type="text/javascript" src="http://www.russellmcc.com/knobjs/knob.min.js"></script>
+    <link rel="stylesheet" href="http://www.russellmcc.com/knobjs/knobjs.css"/>
   </head>
   <body>
     <script>
